# app/src/app/controllers/health_controller.go
@@ -1,0 +1,39 @@
+package controllers
+
+import (
+	"github.com/gin-gonic/gin"
+)
+
+// HealthController handles health endpoints
+type HealthController interface {
+	BaseController
+
+	// Ping the health check endpoint
+	Ping(c *gin.Context)
+}
+
+// Implements BaseController interface
+type healthControllerImpl struct{}
+
+// Creates a new HealthController
+func NewHealthController() HealthController {
+	return &healthControllerImpl{}
+}
+
+// Registers health-related routes
+func (hc *healthControllerImpl) RegisterRoutes(r *gin.Engine) {
+	r.GET("/v1/ping", hc.Ping)
+}
+
+// Ping the health check endpoint
+//
+//	@Summary		Health check
+//	@Description	Returns pong
+//	@Tags			health
+//	@Produce		json
+//	@Success		200	{object}	map[string]string
+//	@Failure		500	{object}	map[string]string
+//	@Router			/v1/ping [get]
+func (hc *healthControllerImpl) Ping(c *gin.Context) {
+	c.JSON(200, gin.H{"message": "pong"})
+}
